This commit has got next changes: 1) weatherForecast "route.ts" for  WeatherAPI is set not to save the cached data. 2) the dark theme has been added for Order View in the user's main page. 3) additional changes in localizations. 4) Groq AI endpoint has been created and tested successfully.

--- a/cafeversity/languages/by.json
+++ b/cafeversity/languages/by.json
@@ -58,7 +58,7 @@
             "open": "Адчыніць Калькулятар",
             "calcName": "Лічыльнык страў",
             "foodName": "Назва Стравы",
-            "portion": "Кол-сць порцый",
+            "portion": "Лічба порцый",
             "cost": "Кошт",
             "cancel": "Адмена",
             "tipForUse": "Каб дадаць страву ў калькулятар, націскніце на яе кошт.",
@@ -84,7 +84,7 @@
         },
         "bottomButtons": {
             "left": "Сённяшнія Стравы",
-            "right": "Галоўная старонка"
+            "right": "Галоўная Старонка"
         }
     },
     "AuthPages": {
@@ -95,12 +95,12 @@
             "enterGate": "Уваходная Брама",
             "adminGate": "Адмінаўская Брама",
             "adminReg": "Рэгістрацыя Адмінаў",
-            "codeConfirmation": "Пацвярджэнне Ўваходу"
+            "codeConfirmation": "Пацверджэнне Ўваходу"
         },
         "texts": {
             "codeConfirmation": {
                 "part1": "На Ваш адрас эляктроннай пошты '",
-                "part2": "' быў дасланы спецыяльны код для пацвярдэння ўваходу як адмін."
+                "part2": "' быў дасланы спецыяльны код для пацверджэння ўваходу як адмін."
             }
         },
         "fields": {
@@ -136,7 +136,7 @@
                 "placeholder": "+375(**)***-**-**"
             },
             "emailCodeConfirmField": {
-                "name": "Код Пацвярджэння (****-*****-****)",
+                "name": "Код Пацверджэння (****-*****-****)",
                 "placeholder": "****-*****-****"
             },
             "otherNames": {
@@ -153,8 +153,8 @@
             "exit": "Выхад",
             "logIn": "Увайсці",
             "back": "Ўзад",
-            "confirm": "Пацвярджэнне",
-            "adminEntrance": "Да Адмінаўскай Брамы"
+            "confirm": "Пацверджэнне",
+            "adminEntrance": "Да Ўваходу Адмінаў"
         },
         "links": {
             "newRecovery": {
@@ -267,7 +267,7 @@
             "saveButtonType1": "Змена",
             "saveButtonType2": "Захова",
             "changesDialog": {
-                "mainQuestion1": "Ці згодзен Ты са зменамі?",
+                "mainQuestion1": "Ці згодзен са зменамі?",
                 "mainQuestion2": "Хочаш адмовіць змены?",
                 "accessButton": "Так",
                 "denyButton": "Не"
@@ -277,21 +277,21 @@
         "secondSetsPart": {
             "name": "Смакі & Цялесная Канстытуцыя",
             "subtitle1": {
-                "name": "Абяры свае перавагі",
+                "name": "Адбяры свае перавагі",
                 "preferQuestion1": "Ці хочаш есці вострыя стравы?",
                 "preferQuestion2": "Ці аддаеш перавагу да вегетарыянскіх страў?",
                 "preferQuestion3": "Ты веган?"
             },
             "subtitle2": {
-                "name": "Сярэдняя колькасць калорыяў у дзень",
-                "mainQuestion": "Колькі калорыяў хочаш атрымаўваць у дзень?"
+                "name": "Сярэдняя колькасць калорыяў штодзённа",
+                "mainQuestion": "Колькі калорыяў хочаш атрымоўваць у дзень?"
             } 
         },
         "thirdSetsPart": {
             "name": "Выгляд Старонкі",
             "subtitle1": {
                 "name": "Мова",
-                "mainQuestion": "Абяры сваю мову: "
+                "mainQuestion": "Адбяры сваю мову: "
             },
             "subtitle2": {
                 "name": "Рэжым Старонцы",
@@ -301,13 +301,13 @@
             },
             "subtitle3": {
                 "name": "Колер Вылучэння",
-                "mainQuestion": "Абяры адзін з колераў"
+                "mainQuestion": "Адбяры адзін з колераў"
             },
             "subtitle4": {
                 "name": "Налады Шрыфту",
-                "fontQuestion1": "Абяры Сямейства Шрыфтаў",
-                "fontQuestion2": "Абяры Памер Шрыфту",
-                "fontQuestion3": "Абяры Таўшчыню Шрыфту"
+                "fontQuestion1": "Адбяры Сямейства Шрыфтаў",
+                "fontQuestion2": "Адбяры Памер Шрыфту",
+                "fontQuestion3": "Адбяры Таўшчыню Шрыфту"
             }
         }
     },
@@ -318,7 +318,9 @@
             "main": "Гарачыя Стравы",
             "dessert": "Дэсерты",
             "drink": "Напоі"
-        }
+        },
+        "loading": "Загрузка страў...",
+        "noDishes": "Ніводнай стравы ў гэтай катыгорыі"
     },
     "UserChoisenDishShortInfo": {
         "nutritions": {
@@ -370,8 +372,8 @@
         },
         "ChartsNames": {
             "chart1": "Папулярнасць страў адносна іх сустракаемасці ў замовах",
-            "chart2": "Колькасць страў па тыпах рацыёну",
-            "chart3": "Колькасць страў па катыгорыях",
+            "chart2": "Лічба страў па тыпах рацыёну",
+            "chart3": "Лічба страў па катыгорыях",
             "chart4": "Прыбытак усіх кафэ"
         }
     },
@@ -420,7 +422,7 @@
                 },
                 "saveChangesDialog": {
                     "title": "Захаванне Новых Дадзеных",
-                    "text": "Ці згодны вы захаваць абноўленыя даныя?",
+                    "text": "Ці згодны захаваць абноўленыя дадзеныя?",
                     "buttons": {
                         "yes": "Так",
                         "no": "Не"
@@ -480,7 +482,7 @@
                 "dialogs": {
                     "saveChangesDialog": {
                         "title": "Захаванне Новых Дадзеных",
-                        "text": "Ці згодны вы захаваць абноўленыя даныя?",
+                        "text": "Ці згодны захаваць абноўленыя даныя?",
                         "buttons": {
                             "yes": "Так",
                             "no": "Не"
@@ -498,7 +500,7 @@
                 }
             },
             "roles": {
-                "name": "Ролі Адмінаў (Табліца)"
+                "name": "Ролі Адмінаў"
             }
         }
     }
