The checking and loading animation has been added into auth pages to improve the UX (user's experience).
Also the app has got 4 new languages and it will have got others in the future.

--- a/cafeversity/languages/by.json
+++ b/cafeversity/languages/by.json
@@ -345,9 +345,9 @@
             "weightName": "г."
         },
         "diets": {
-            "spicy": "Вострае",
-            "veget": "Вегетарыянскае",
-            "vegan": "Веганскае"
+            "spicy": "Вострая",
+            "veget": "Вегетарыянская",
+            "vegan": "Веганская"
         },
         "mealSentence": "Хутчэй сустракаецца (спажываецца):",
         "meals": {
@@ -473,7 +473,7 @@
                     },
                     "confirmLetter": {
                         "sent": "Ліст з пацвярджэннем быў адпраўлены на вашу электронную пошту:",
-                        "problem": "Нешта пайшло не так... Калі ласка, праверце функцыю «letterForEmailConfirmation»."
+                        "problem": "Нешта пайшло не так... Калі ласка, праверце функцыю 'letterForEmailConfirmation'."
                     },
                     "isEmailConfirmed": {
                         "yes": "Ваш адрас электроннай пошты пацверджаны!",
@@ -488,7 +488,7 @@
                 "dialogs": {
                     "saveChangesDialog": {
                         "title": "Захаванне Новых Дадзеных",
-                        "text": "Ці згодны захаваць абноўленыя даныя?",
+                        "text": "Ці згодны захаваць абноўленыя дадзеныя?",
                         "buttons": {
                             "yes": "Так",
                             "no": "Не"
