Admin's panels have got shortened names, its opening buttons have been redesigned, admin sets' page has been repared: it has stopped awaiting of [adminInside] dynamic route segment and API sends admin's info by his/her found cookie's value. Also light/dark themes has gone for charts and other admin's pages components.

--- a/cafeversity/languages/by.json
+++ b/cafeversity/languages/by.json
@@ -370,11 +370,11 @@
             "exit": "Выхад"
         },
         "AdminHeaderOptions": {
-            "dashboard": "Панэль Кіравання Адміна",
-            "usersPanel": "Панэль Карыстальнікаў",
-            "cafesPanel": "Панель Кафэ",
-            "dishesPanel": "Панель Страў",
-            "ordersPanel": "Панель Замоў"
+            "dashboard": "Статыстыка",
+            "usersPanel": "Карыстальнікі",
+            "cafesPanel": "Кафэ (Сталоўкі)",
+            "dishesPanel": "Стравы",
+            "ordersPanel": "Замовы"
         },
         "ChartsNames": {
             "chart1": "Папулярнасць страў адносна іх сустракаемасці ў замовах",
