--- a/cafeversity/languages/en.json
+++ b/cafeversity/languages/en.json
@@ -370,11 +370,11 @@
             "exit": "Sign Out"
         },
         "AdminHeaderOptions": {
-            "dashboard": "Admin Dashboard",
-            "usersPanel": "Users Panel",
-            "cafesPanel": "Cafes Panel",
-            "dishesPanel": "Dishes Panel",
-            "ordersPanel": "Orders Panel"
+            "dashboard": "Dashboard",
+            "usersPanel": "Users",
+            "cafesPanel": "Cafes (Canteens)",
+            "dishesPanel": "Dishes",
+            "ordersPanel": "Orders"
         },
         "ChartsNames": {
             "chart1": "Popularity of dishes relative to their occurrence in orders",
